kubernetes/backup/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend
  name: backend
  namespace: deernation
spec:
  host: app.hirschberg-sauerland.de
  path: /socketcluster
  port:
    targetPort: ws
  tls:
    termination: edge
  to:
    kind: Service
    name: backend
    weight: 100
  wildcardPolicy: None
