kubernetes/backup/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fronted
  name: frontend
  namespace: deernation
spec:
  host: app.hirschberg-sauerland.de
  path: /
  port:
    targetPort: gui
  tls:
    termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
